--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,4 +16,5 @@ dependencies = [
     "tqdm>=4.67.1",
     "langchain-openai>=0.3.7",
     "chromadb>=0.6.3",
+    "sentence-transformers>=3.4.1",
 ]
