--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,4 +18,6 @@ dependencies = [
     "chromadb>=0.6.3",
     "sentence-transformers>=3.4.1",
     "mistralai>=1.5.0",
+    "pre-commit>=4.1.0",
+    "isort>=6.0.1",
 ]
