--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,3 +3,13 @@ repos:
     rev: v5.10.1  # Use the latest version of isort
     hooks:
       - id: isort
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.4.0
+    hooks:
+      - id: trailing-whitespace
+      - id: end-of-file-fixer
+      - id: check-json
+  - repo: https://github.com/psf/black
+    rev: 23.1.0
+    hooks:
+      - id: black
