--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,4 +22,7 @@ dependencies = [
     "isort>=6.0.1",
     "streamlit>=1.43.0",
     "replicate>=1.0.4",
+    "torch>=2.6.0",
+    "torchvision>=0.21.0",
+    "transformers>=4.49.0",
 ]
