--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dependencies = [
     "seaborn>=0.13.2",
     "tqdm>=4.67.1",
     "langchain-openai>=0.3.7",
-    "chromadb>=0.6.3",
+    "chromadb==0.5.20",
     "sentence-transformers>=3.4.1",
     "mistralai>=1.5.0",
     "pre-commit>=4.1.0",
