--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,4 +25,6 @@ dependencies = [
     "torch>=2.6.0",
     "torchvision>=0.21.0",
     "transformers>=4.49.0",
+    "langchain-qdrant>=0.2.0",
+    "fastembed>=0.6.0",
 ]
