--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiohappyeyeballs==2.4.6
+aiohappyeyeballs==2.6.1
 aiohttp==3.11.13
 aiosignal==1.3.2
 altair==5.5.0
@@ -7,7 +7,7 @@ anyio==4.8.0
 appnope==0.1.4
 asgiref==3.8.1
 asttokens==3.0.0
-attrs==25.1.0
+attrs==25.3.0
 backoff==2.2.1
 bcrypt==4.3.0
 blinker==1.9.0
@@ -24,7 +24,7 @@ comm==0.2.2
 contourpy==1.3.1
 cycler==0.12.1
 dataclasses-json==0.6.7
-debugpy==1.8.12
+debugpy==1.8.13
 decorator==5.2.1
 deprecated==1.2.18
 distlib==0.3.9
@@ -33,35 +33,40 @@ dotenv==0.9.9
 durationpy==0.9
 eval-type-backport==0.2.2
 executing==2.2.0
-fastapi==0.115.9
-filelock==3.17.0
+fastapi==0.115.11
+fastembed==0.6.0
+filelock==3.18.0
 flatbuffers==25.2.10
 fonttools==4.56.0
 frozenlist==1.5.0
-fsspec==2025.2.0
+fsspec==2025.3.0
 gitdb==4.0.12
 gitpython==3.1.44
 google-auth==2.38.0
-googleapis-common-protos==1.68.0
-grpcio==1.70.0
+googleapis-common-protos==1.69.1
+grpcio==1.71.0
+grpcio-tools==1.71.0
 h11==0.14.0
+h2==4.2.0
+hpack==4.1.0
 httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
 httpx-sse==0.4.0
-huggingface-hub==0.29.1
+huggingface-hub==0.29.3
 humanfriendly==10.0
-identify==2.6.8
+hyperframe==6.1.0
+identify==2.6.9
 idna==3.10
-importlib-metadata==8.5.0
+importlib-metadata==8.6.1
 importlib-resources==6.5.2
 ipykernel==6.29.5
-ipython==9.0.0
+ipython==9.0.2
 ipython-pygments-lexers==1.1.1
 isort==6.0.1
 jedi==0.19.2
-jinja2==3.1.5
-jiter==0.8.2
+jinja2==3.1.6
+jiter==0.9.0
 joblib==1.4.2
 jsonpatch==1.33
 jsonpath-python==1.0.6
@@ -72,42 +77,44 @@ jupyter-client==8.6.3
 jupyter-core==5.7.2
 kiwisolver==1.4.8
 kubernetes==32.0.1
-langchain==0.3.19
-langchain-community==0.3.18
-langchain-core==0.3.40
-langchain-openai==0.3.7
+langchain==0.3.20
+langchain-community==0.3.19
+langchain-core==0.3.45
+langchain-openai==0.3.8
+langchain-qdrant==0.2.0
 langchain-text-splitters==0.3.6
-langsmith==0.3.11
+langsmith==0.3.13
+loguru==0.7.3
 markdown-it-py==3.0.0
 markupsafe==3.0.2
 marshmallow==3.26.1
 matplotlib==3.10.1
 matplotlib-inline==0.1.7
 mdurl==0.1.2
-mistralai==1.5.0
+mistralai==1.5.1
 mmh3==5.1.0
 monotonic==1.6
 mpmath==1.3.0
 multidict==6.1.0
 mypy-extensions==1.0.0
-narwhals==1.29.1
+narwhals==1.30.0
 nest-asyncio==1.6.0
 networkx==3.4.2
 nodeenv==1.9.1
 numpy==2.2.3
 oauthlib==3.2.2
-onnxruntime==1.20.1
-openai==1.65.1
-opentelemetry-api==1.30.0
-opentelemetry-exporter-otlp-proto-common==1.30.0
-opentelemetry-exporter-otlp-proto-grpc==1.30.0
-opentelemetry-instrumentation==0.51b0
-opentelemetry-instrumentation-asgi==0.51b0
-opentelemetry-instrumentation-fastapi==0.51b0
-opentelemetry-proto==1.30.0
-opentelemetry-sdk==1.30.0
-opentelemetry-semantic-conventions==0.51b0
-opentelemetry-util-http==0.51b0
+onnxruntime==1.21.0
+openai==1.66.3
+opentelemetry-api==1.31.0
+opentelemetry-exporter-otlp-proto-common==1.31.0
+opentelemetry-exporter-otlp-proto-grpc==1.31.0
+opentelemetry-instrumentation==0.52b0
+opentelemetry-instrumentation-asgi==0.52b0
+opentelemetry-instrumentation-fastapi==0.52b0
+opentelemetry-proto==1.31.0
+opentelemetry-sdk==1.31.0
+opentelemetry-semantic-conventions==0.52b0
+opentelemetry-util-http==0.52b0
 orjson==3.10.15
 overrides==7.7.0
 packaging==24.2
@@ -116,7 +123,8 @@ parso==0.8.4
 pexpect==4.9.0
 pillow==11.1.0
 platformdirs==4.3.6
-posthog==3.17.0
+portalocker==2.10.1
+posthog==3.20.0
 pre-commit==4.1.0
 prompt-toolkit==3.0.50
 propcache==0.3.0
@@ -124,6 +132,7 @@ protobuf==5.29.3
 psutil==7.0.0
 ptyprocess==0.7.0
 pure-eval==0.2.3
+py-rust-stemmers==0.1.5
 pyarrow==19.0.1
 pyasn1==0.6.1
 pyasn1-modules==0.4.1
@@ -135,12 +144,12 @@ pygments==2.19.1
 pyparsing==3.2.1
 pypika==0.48.9
 pyproject-hooks==1.2.0
-pysqlite3-binary==0.5.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2025.1
 pyyaml==6.0.2
-pyzmq==26.2.1
+pyzmq==26.3.0
+qdrant-client==1.13.3
 referencing==0.36.2
 regex==2024.11.6
 replicate==1.0.4
@@ -155,20 +164,20 @@ scikit-learn==1.6.1
 scipy==1.15.2
 seaborn==0.13.2
 sentence-transformers==3.4.1
-setuptools==75.8.2
+setuptools==76.0.0
 shellingham==1.5.4
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
-sqlalchemy==2.0.38
+sqlalchemy==2.0.39
 stack-data==0.6.3
-starlette==0.45.3
-streamlit==1.43.0
+starlette==0.46.1
+streamlit==1.43.2
 sympy==1.13.1
 tenacity==9.0.0
-threadpoolctl==3.5.0
+threadpoolctl==3.6.0
 tiktoken==0.9.0
-tokenizers==0.21.0
+tokenizers==0.21.1
 toml==0.10.2
 torch==2.6.0
 torchvision==0.21.0
@@ -183,11 +192,11 @@ tzdata==2025.1
 urllib3==2.3.0
 uvicorn==0.34.0
 uvloop==0.21.0
-virtualenv==20.29.2
+virtualenv==20.29.3
 watchfiles==1.0.4
 wcwidth==0.2.13
 websocket-client==1.8.0
-websockets==15.0
+websockets==15.0.1
 wrapt==1.17.2
 yarl==1.18.3
 zipp==3.21.0
