--- a/requirements.txt
+++ b/requirements.txt
@@ -144,6 +144,7 @@ pygments==2.19.1
 pyparsing==3.2.1
 pypika==0.48.9
 pyproject-hooks==1.2.0
+pysqlite3-binary==0.5.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2025.1
